--- a/web.config
+++ b/web.config
@@ -4,37 +4,42 @@
         <rewrite>
             <rules>
                 <clear />
-                <rule name="インポートされた規則 3" stopProcessing="true">
+                <rule name="外部ライブラリ" stopProcessing="true">
                     <match url="^(css|js)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="common/{R:1}/{R:2}" />
                 </rule>
-                <rule name="インポートされた規則 1" stopProcessing="true">
+                <rule name="テンプレートCSS画像" stopProcessing="true">
                     <match url="^.*/css/res/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="Core/Template/cssimg/{R:1}" />
                 </rule>
-                <rule name="インポートされた規則 2" stopProcessing="true">
+                <rule name="テンプレート画像" stopProcessing="true">
                     <match url="^res/images/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="Core/Template/images/{R:1}" />
                 </rule>
-                <rule name="インポートされた規則 4" stopProcessing="true">
+                <rule name="アプリCSS画像" stopProcessing="true">
                     <match url="^([^/]+)/.*/css/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:2}" />
                 </rule>
-                <rule name="インポートされた規則 6" stopProcessing="true">
+                <rule name="アプリCSS/JS" stopProcessing="true">
                     <match url="^([^/]+)/(css|js)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/{R:2}/{R:3}" />
                 </rule>
-                <rule name="インポートされた規則 5" stopProcessing="true">
+                <rule name="アプリ共通画像" stopProcessing="true">
+                    <match url="^([^/]+)/images/(.*)$" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Rewrite" url="app/{R:1}/webroot/images/{R:2}" />
+                </rule>
+                <rule name="アプリモジュール画像" stopProcessing="true">
                     <match url="^([^/]+)/.*/images/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/images/{R:2}" />
                 </rule>
-                <rule name="インポートされた規則 8" stopProcessing="true">
+                <rule name="ルーティング" stopProcessing="true">
                     <match url="^.*$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{DOCUMENT_ROOT}/{URL}" matchType="IsFile" negate="true" />
