--- a/web.config
+++ b/web.config
@@ -7,7 +7,7 @@
                 <rule name="外部ライブラリ" stopProcessing="true">
                     <match url="^(css|js)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="Rewrite" url="common/{R:1}/{R:2}" />
+                    <action type="Rewrite" url="vendor/webroot/{R:1}/{R:2}" />
                 </rule>
                 <rule name="テンプレートCSS画像" stopProcessing="true">
                     <match url="^.*/css/res/img/(.*)$" ignoreCase="false" />
