Readmeからマニュアル部分を分離 セッション変数を固有の変数内に格納するよう変更 auto_linkの文字解析を改善

--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
             <rules>
                 <clear />
                 <rule name="外部ライブラリ" stopProcessing="true">
-                    <match url="^(css|js)/(.*)$" ignoreCase="false" />
+                    <match url="^(css|js|images)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="vendor/webroot/{R:1}/{R:2}" />
                 </rule>
