リソース外のスタイル,JSをアプリと同じwebrrotフォルダへ移動

--- a/web.config
+++ b/web.config
@@ -4,6 +4,11 @@
         <rewrite>
             <rules>
                 <clear />
+                <rule name="interimstorage" stopProcessing="true">
+                    <match url="^interimstorage/(.*)$" ignoreCase="false" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="none" />
+                </rule>
                 <rule name="外部ライブラリ" stopProcessing="true">
                     <match url="^(css|js|images)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
@@ -12,12 +17,12 @@
                 <rule name="テンプレートCSS画像" stopProcessing="true">
                     <match url="^.*/css/res/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="Rewrite" url="Core/Template/cssimg/{R:1}" />
+                    <action type="Rewrite" url="Core/Template/webroot/cssimg/{R:1}" />
                 </rule>
-                <rule name="テンプレート画像" stopProcessing="true">
-                    <match url="^res/images/(.*)$" ignoreCase="false" />
+                <rule name="テンプレートリソース" stopProcessing="true">
+                    <match url="^res/(css|js|images)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="Rewrite" url="Core/Template/images/{R:1}" />
+                    <action type="Rewrite" url="Core/Template/webroot/{R:1}/{R:2}" />
                 </rule>
                 <rule name="アプリCSS画像" stopProcessing="true">
                     <match url="^([^/]+)/.*/css/img/(.*)$" ignoreCase="false" />
