デバッグトレースの改良

--- a/web.config
+++ b/web.config
@@ -5,9 +5,9 @@
             <rules>
                 <clear />
                 <rule name="interimstorage" stopProcessing="true">
-                    <match url="^interimstorage/(.*)$" ignoreCase="false" />
+                    <match url="^interimstorage" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="none" />
+                    <action type="None" />
                 </rule>
                 <rule name="外部ライブラリ" stopProcessing="true">
                     <match url="^(css|js|images)/(.*)$" ignoreCase="false" />
