フィルタパス以降の数字外パラメータへの対応 デバッグ修正

--- a/web.config
+++ b/web.config
@@ -9,6 +9,11 @@
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="None" />
                 </rule>
+                <rule name="data" stopProcessing="true">
+                    <match url="^data" ignoreCase="false" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="None" />
+                </rule>
                 <rule name="外部ライブラリ" stopProcessing="true">
                     <match url="^(css|js|images)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
@@ -48,6 +53,7 @@
                     <match url="^.*$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{DOCUMENT_ROOT}/{URL}" matchType="IsFile" negate="true" />
+                        <add input="{DOCUMENT_ROOT}/{URL}" matchType="IsDirectory" negate="true" />
                     </conditions>
                     <action type="Rewrite" url="index.php" />
                 </rule>
