デバッグ処理の改善

--- a/web.config
+++ b/web.config
@@ -52,8 +52,8 @@
                 <rule name="ルーティング" stopProcessing="true">
                     <match url="^.*$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{DOCUMENT_ROOT}/{URL}" matchType="IsFile" negate="true" />
-                        <add input="{DOCUMENT_ROOT}/{URL}" matchType="IsDirectory" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                     </conditions>
                     <action type="Rewrite" url="index.php" />
                 </rule>
