--- a/web.config
+++ b/web.config
@@ -55,7 +55,7 @@
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                     </conditions>
-                    <action type="Rewrite" url="index.php" />
+                    <action type="Rewrite" url="index.php" appendQueryString="false" />
                 </rule>
             </rules>
         </rewrite>
