--- a/web.config
+++ b/web.config
@@ -49,6 +49,11 @@
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/images/{R:2}" />
                 </rule>
+                <rule name="upload">
+                    <match url="^([^/]+)/files/(.*)$" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Rewrite" url="app/{R:1}/upload_files/{R:2}" />
+                </rule>
                 <rule name="ルーティング" stopProcessing="true">
                     <match url="^.*$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
@@ -59,5 +64,11 @@
                 </rule>
             </rules>
         </rewrite>
+        <staticContent>
+            <mimeMap fileExtension=".mp4" mimeType="video/mpeg" />
+        </staticContent>
     </system.webServer>
+    <system.web>
+        <httpRuntime maxRequestLength="1024000000" />
+    </system.web>
 </configuration>
