--- a/web.config
+++ b/web.config
@@ -64,11 +64,13 @@
                 </rule>
             </rules>
         </rewrite>
-        <staticContent>
-            <mimeMap fileExtension=".mp4" mimeType="video/mpeg" />
-        </staticContent>
+        <security>
+            <requestFiltering>
+                <requestLimits maxAllowedContentLength="1073741824" />
+            </requestFiltering>
+        </security>
     </system.webServer>
     <system.web>
-        <httpRuntime maxRequestLength="1024000000" />
+        <httpRuntime maxRequestLength="1048576" />
     </system.web>
 </configuration>
