redirect path change

--- a/web.config
+++ b/web.config
@@ -19,6 +19,11 @@
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="vendor/webroot/{R:1}/{R:2}" />
                 </rule>
+                <rule name="アプリ共通アップロード">
+                    <match url="^files/(.*)$" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Rewrite" url="vendor/upload_files/{R:1}" />
+                </rule>
                 <rule name="テンプレートCSS画像" stopProcessing="true">
                     <match url="^.*/css/res/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
@@ -30,9 +35,9 @@
                     <action type="Rewrite" url="Core/Template/webroot/{R:1}/{R:2}" />
                 </rule>
                 <rule name="アプリCSS画像" stopProcessing="true">
-                    <match url="^([^/]+)/css/img/(.*)$" ignoreCase="false" />
+                    <match url="^([^/]+)/(/.+)?/css/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:2}" />
+                    <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:3}" />
                 </rule>
                 <rule name="アプリCSS/JS" stopProcessing="true">
                     <match url="^([^/]+)/(css|js)/(.*)$" ignoreCase="false" />
