--- a/.htaccess
+++ b/.htaccess
@@ -3,18 +3,18 @@ DirectoryIndex index.php
 RewriteEngine On
 RewriteBase /pawmoo/
 
-# 外部ライブラリ
+# 外部ライブラリ(アプリ間共通)
 RewriteRule ^(css|js|images)/(.*)$       vendor/webroot/$1/$2 [END]
+RewriteRule ^files/(.*)$  vendor/upload_files/$1 [END]
 
 # テンプレートリソース(CSS/画像ファイル)
 RewriteRule ^.*/css/res/img/(.*)$ Core/Template/webroot/cssimg/$1 [END]
 RewriteRule ^res/(css|js|images)/(.*)$   Core/Template/webroot/$1/$2 [END]
 
 # アプリごとに異なるリダイレクト
-RewriteRule ^([^/]+)/.*/css/img/(.*)$ app/$1/webroot/cssimg/$2 [END]
-#RewriteRule ^([^/]+)/(css|js|images)/(.*)$   app/$1/webroot/$2/$3 [END]
+# app/css|js|images/
+RewriteRule ^([^/]+)/(/.+)?/css/img/(.*)$ app/$1/webroot/cssimg/$3 [END]
 RewriteRule ^([^/]+)/images/(.*)$   app/$1/webroot/images/$2 [END]
-#RewriteRule ^([^/]+)/.*/images/(.*)$  app/$1/webroot/images/$2 [END]
 RewriteRule ^([^/]+)/files/(.*)$  app/$1/upload_files/$2 [END]
 
 # 実体があるかもしれないファイルは条件判定
