--- a/web.config
+++ b/web.config
@@ -45,14 +45,12 @@
                     <action type="Rewrite" url="app/{R:1}/webroot/{R:2}/{R:3}" />
                 </rule>
                 <rule name="アプリ共通画像" stopProcessing="true">
-                    <match url="^([^/]+)/images/(.*)$" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="Rewrite" url="app/{R:1}/webroot/images/{R:2}" />
-                </rule>
-                <rule name="アプリモジュール画像" stopProcessing="true">
-                    <match url="^([^/]+)/.*/images/(.*)$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="Rewrite" url="app/{R:1}/webroot/images/{R:2}" />
+                    <match url="^([^/]+)(/[^\/]+)?/images/(.*)$" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
+                    <action type="Rewrite" url="app/{R:1}/webroot/images/{R:3}" />
                 </rule>
                 <rule name="upload">
                     <match url="^([^/]+)/files/(.*)$" />
