--- a/web.config
+++ b/web.config
@@ -35,7 +35,7 @@
                     <action type="Rewrite" url="Core/Template/webroot/{R:1}/{R:2}" />
                 </rule>
                 <rule name="アプリCSS画像" stopProcessing="true">
-                    <match url="^([^/]+)(/.+)?/css/img/(.*)$" ignoreCase="false" />
+                    <match url="^([^/]+)(/[\/]+)?/css/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:3}" />
                 </rule>
@@ -45,7 +45,7 @@
                     <action type="Rewrite" url="app/{R:1}/webroot/{R:2}/{R:3}" />
                 </rule>
                 <rule name="アプリ共通画像" stopProcessing="true">
-                    <match url="^([^/]+)(/[^\/]+)?/images/(.*)$" />
+                    <match url="^([^/]+)(/[^\/]+)*/images/(.*)$" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
