rewrite rule missed.

--- a/web.config
+++ b/web.config
@@ -35,7 +35,7 @@
                     <action type="Rewrite" url="Core/Template/webroot/{R:1}/{R:2}" />
                 </rule>
                 <rule name="アプリCSS画像" stopProcessing="true">
-                    <match url="^([^/]+)(/[\/]+)?/css/img/(.*)$" ignoreCase="false" />
+                    <match url="^([^/]+)(/[^\/]+)?/css/img/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:3}" />
                 </rule>
