--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,7 @@ RewriteRule ^files/(.*)$  vendor/upload_files/$1 [END]
 # テンプレートリソース(CSS/画像ファイル)
 RewriteRule ^.*/css/res/img/(.*)$ Core/Template/webroot/cssimg/$1 [END]
 RewriteRule ^res/(css|js|images)/(.*)$   Core/Template/webroot/$1/$2 [END]
+RewriteRule ^([^/]+).ico$   Core/Template/webroot/images/$1.ico [END]
 
 # アプリごとに異なるリダイレクト
 # app/css|js|images/
