IIS mod-rewrite change.

--- a/web.config
+++ b/web.config
@@ -35,17 +35,23 @@
                     <action type="Rewrite" url="Core/Template/webroot/{R:1}/{R:2}" />
                 </rule>
                 <rule name="アプリCSS画像" stopProcessing="true">
-                    <match url="^([^/]+)(/[^\/]+)?/css/img/(.*)$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <match url="^([^/]+)(/[^/]+)?/css/img/(.*)$" ignoreCase="false" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
                     <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:3}" />
                 </rule>
                 <rule name="アプリCSS/JS" stopProcessing="true">
                     <match url="^([^/]+)/(css|js)/(.*)$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
                     <action type="Rewrite" url="app/{R:1}/webroot/{R:2}/{R:3}" />
                 </rule>
                 <rule name="アプリ共通画像" stopProcessing="true">
-                    <match url="^([^/]+)(/[^\/]+)*/images/(.*)$" />
+                    <match url="^([^/]+)(/[^/]+)*/images/(.*)$" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
@@ -54,7 +60,10 @@
                 </rule>
                 <rule name="upload">
                     <match url="^([^/]+)/files/(.*)$" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                    </conditions>
                     <action type="Rewrite" url="app/{R:1}/upload_files/{R:2}" />
                 </rule>
                 <rule name="ルーティング" stopProcessing="true">
