--- a/web.config
+++ b/web.config
@@ -43,7 +43,7 @@
                     <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:3}" />
                 </rule>
                 <rule name="アプリCSS/JS" stopProcessing="true">
-                    <match url="^([^/]+)/(css|js)/(.*)$" ignoreCase="false" />
+                    <match url="^([^/]+)/res/(css|js)/(.*)$" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
