rewrite定義見直し

--- a/web.config
+++ b/web.config
@@ -4,13 +4,8 @@
         <rewrite>
             <rules>
                 <clear />
-                <rule name="interimstorage" stopProcessing="true">
-                    <match url="^interimstorage" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="None" />
-                </rule>
-                <rule name="data" stopProcessing="true">
-                    <match url="^data" ignoreCase="false" />
+                <rule name="仮想フォルダ" stopProcessing="true">
+                    <match url="^(interimstorage|data|common)" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="None" />
                 </rule>
@@ -19,7 +14,7 @@
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="vendor/webroot/{R:1}/{R:2}" />
                 </rule>
-                <rule name="アプリ共通アップロード">
+                <rule name="外部アップロード">
                     <match url="^files/(.*)$" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="vendor/upload_files/{R:1}" />
@@ -36,34 +31,22 @@
                 </rule>
                 <rule name="アプリCSS画像" stopProcessing="true">
                     <match url="^([^/]+)(/[^/]+)?/css/img/(.*)$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/cssimg/{R:3}" />
                 </rule>
                 <rule name="アプリCSS/JS" stopProcessing="true">
-                    <match url="^([^/]+)/res/(css|js)/(.*)$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
+                    <match url="^([^/]+)/(css|js|images)/(.*)$" ignoreCase="false" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/webroot/{R:2}/{R:3}" />
                 </rule>
-                <rule name="アプリ共通画像" stopProcessing="true">
-                    <match url="^([^/]+)(/[^/]+)*/images/(.*)$" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="app/{R:1}/webroot/images/{R:3}" />
+                <rule name="モジュール画像" stopProcessing="true">
+                    <match url="^([^/]+)/([^/]+)/images/(.*)$" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="Rewrite" url="app/{R:1}/webroot/images/{R:2}/{R:3}" />
                 </rule>
                 <rule name="upload">
                     <match url="^([^/]+)/files/(.*)$" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
                     <action type="Rewrite" url="app/{R:1}/upload_files/{R:2}" />
                 </rule>
                 <rule name="ルーティング" stopProcessing="true">
